<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>ros2lib</name>
  <version>0.0.1</version>
  <description>ROS2 Communication Library</description>
  <maintainer email="joasjh7@google.com">SJH</maintainer>
  <license>SoiLatte</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
